# GreenThumb

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INSTALL_ML_QUICKSTART.md  LICENSE  ML_SETUP.md  Makefile  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  SETUP.md  SETUP_BACKEND.md  SETUP_INSTRUCTIONS.txt  TODO.md  docker-compose.yml  env.example  logging.conf  pyproject.toml  pytest.ini  requirements-api.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.bat  setup.cfg  setup.py  setup.sh
.github/workflows/: ci.yml  test.yml
backend/: __init__.py  requirements.txt
backend/api/: __init__.py  config.py  dependencies.py  errors.py  main.py  waitlist.py
backend/api/middleware/: __init__.py  logging.py  timing.py
backend/api/models/: __init__.py  common.py  feedback.py  recommend.py  search.py
backend/api/routers/: __init__.py  admin.py  feedback.py  health.py  recommend.py  search.py
backend/api/routes/: __init__.py
backend/api/schemas/: __init__.py
backend/api/services/: __init__.py  cache_service.py  metadata_service.py  performance_monitor.py  (+1 more)
backend/database/: __init__.py
backend/db/: __init__.py  models.py  session.py
backend/ingestion/: __init__.py  csv_processor.py
backend/ml/: .env.ml.example  config.py  download_models.py  model_loader.py  test_config.py  test_setup.py
backend/models/: __init__.py  product.py  quality.py
backend/scripts/: ingest_products.py
backend/search/: __init__.py
backend/tasks/: __init__.py  celery_app.py  embeddings.py  ingestion.py
backend/utils/: __init__.py
data/: test_products.csv  test_sample.csv
data/embeddings/: .gitkeep
data/indices/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/temp/: .gitkeep
data/test/: .gitkeep
database/: monitoring_queries.sql
database/backups/: .gitkeep
database/migrations/: .gitkeep  alembic.ini  env.py
database/schemas/: .gitkeep  000_extensions.sql  001_initial_schema.sql
database/seeds/: .gitkeep
dbt-project/: .gitignore  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt-project/analyses/: .gitkeep
dbt-project/macros/: .gitkeep  product_calculations.sql
dbt-project/seeds/: .gitkeep  brand_tiers.csv  category_mapping.csv
dbt-project/snapshots/: .gitkeep
dbt-project/tests/: .gitkeep  assert_catalog_quality_threshold.sql  assert_enrichment_completeness.sql  assert_no_orphaned_products.sql  assert_price_consistency.sql  assert_referential_integrity.sql  assert_valid_prices.sql  assert_valid_products.sql
docs/: API_USAGE.md  README.md  TASK4_SUMMARY.md  TASK5_FRONTEND_GUIDE.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
frontend/: .dockerignore  .eslintrc.json  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  ENHANCEMENTS.md  FEATURES.md  README.md  env.example  fix-dependencies.sh  index.html  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  quick-fix.sh  script-enhanced.js  script.js  styles.css  tailwind.config.ts  tsconfig.json
frontend/.storybook/: preview.ts
frontend/public/: manifest.json  sw.js
scripts/: greenthumb_cli.py  run_dbt_models.py  setup.py  setup_database.sh  start_dev.sh  test_integration.sh  test_pipeline.py  verify_database.py  verify_ml_setup.py
scripts/api/: start_api.sh  test_api_integration.py  test_api_setup.py
scripts/automation/: config_manager.py  orchestrator.py
scripts/database/: connection_manager.py  create_vector_indexes.py  verify_embeddings_schema.py
scripts/deployment/: .gitkeep  deploy.sh
scripts/ingestion/: .gitkeep  analyze_deduplicates.py  ingest_products.py  sample_ingestion.py  test_deduplicaiton.py
scripts/maintenance/: .gitkeep  init_db.py
scripts/ml/: build_faiss_index.py  generate_embeddings.py  test_embeddings.py  test_faiss_search.py  test_feedback.py  test_filtered_search.py  test_personalized_search.py  test_ranking.py  test_redis_cache.py  test_search_service.py  test_similarity_search.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep  __init__.py
tests/integration/: conftest.py
(+151 files in other folders)
