[metadata]
name = greenthumb-discovery
version = 0.1.0
description = Data ingestion and discovery platform for product data
long_description = file: README.md
long_description_content_type = text/markdown
author = GreenThumb Team
author_email = team@greenthumb.com
url = https://github.com/greenthumb/discovery-mvp
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    sqlalchemy>=2.0.0
    alembic>=1.13.0
    pydantic>=2.5.0
    pandas>=2.1.0

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .pytest_cache,
    .mypy_cache

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[mypy-tests.*]
disallow_untyped_defs = False

